Changing instances to variable

--- a/site/guide/configuration/configure-aws-privatelink.qmd
+++ b/site/guide/configuration/configure-aws-privatelink.qmd
@@ -46,7 +46,7 @@ Recording: 46:00 FR InfoSec log in and set up endpoint > request pending, need t
 
 | Region       | Service name                                            | Private DNS name             |
  ------------- | ------------------------------------------------------- | ---------------------------- |
-| `us-west-2`    | Email <support@validmind.com> | Email <support@validmind.com> | 
+| `us-west-2`    | Email <{{< var validmind.support >}}> | Email <{{< var validmind.support >}}> | 
 
 <!--- | us-west-2    | com.amazonaws.vpce.us-west-2.vpce-svc-0b956fa3e03afa538 | [{{< var aws.privatelink >}}]({{< var aws.privatelink >}}) | --->
 <!--- | us-east-1    | com.amazonaws.vpce.us-west-2.vpce-svc-0b956fa3e03afa538 | private.prod.vm.validmind.ai | --->
@@ -71,7 +71,7 @@ Recording: 46:00 FR InfoSec log in and set up endpoint > request pending, need t
 
    The status for the endpoint should show `Pending`.
 
-2. Contact {{< var vm.product >}} at [support@validmind.ai](mailto:support@validmind.ai?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
+2. Contact {{< var vm.product >}} at [{{< var validmind.support >}}](mailto:{{< var validmind.support >}}?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
 
    - The owner or account ID
    - The VPC endpoint ID
