--- a/site/guide/configuration/configure-google-private-service-connect.qmd
+++ b/site/guide/configuration/configure-google-private-service-connect.qmd
@@ -29,7 +29,7 @@ These steps assume that you already have established connectivity between your o
 
 | Name | Provider |  Region       | Service name                                            | Private DNS name             |
 | -- | -- | --------------- | ------------------------------------------------------- | ---------------------------- |
-| US3 | GCP | `us-west1`    | Email <support@validmind.com> | Email <support@validmind.com> |
+| US3 | GCP | `us-west1`    | Email <{{< var validmind.support >}}> | Email <{{< var validmind.support >}}> |
 
 :::
 
@@ -57,7 +57,7 @@ After these steps, both the Cloud DNS and the Google Compute Engine API should b
 
 ## Request access from {{< var vm.product >}}
 
-Contact {{< var vm.product >}} at [support@validmind.ai](mailto:support@validmind.ai?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
+Contact {{< var vm.product >}} at [{{< var validmind.support >}}](mailto:{{< var validmind.support >}}?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
 
    - The project name
    - The project ID
