URL variable too

--- a/site/guide/configuration/configure-azure-private-link.qmd
+++ b/site/guide/configuration/configure-azure-private-link.qmd
@@ -33,7 +33,7 @@ These steps assume that you already have established connectivity between your o
 
 | Region       | Service name                         | Private DNS name             |
 | ------------ | ------------------------------------ | ---------------------------- |
-| `us-west-2`  | Email <{{< var validmind.support >}}>        | Email <{{< var validmind.support >}}> |
+| `us-west-2`  | Email <{{< var vm.support >}}>        | Email <{{< var vm.support >}}> |
 
 :::
 
@@ -56,7 +56,7 @@ These steps assume that you already have established connectivity between your o
    f. Recommended: When prompted, integrate with an Azure **Private DNS zone** to simplify private IP name resolution.  
    g. Review the configuration and then click **Create** to deploy the private endpoint.
 
-2. Contact {{< var vm.product >}} at [{{< var validmind.support >}}](mailto:{{< var validmind.support >}}?subject=VNet%20Endpoint%20Connection%20Request) to get your new private endpoint connection request accepted. Include the following information:
+2. Contact {{< var vm.product >}} at [{{< var vm.support >}}](mailto:{{< var vm.support >}}?subject=VNet%20Endpoint%20Connection%20Request) to get your new private endpoint connection request accepted. Include the following information:
 
    - The owner or account ID  
    - The private endpoint IP address
