--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -86,7 +86,7 @@ If you have a {{< var vm.product >}} account, provide your login email to help u
 
 ::: {.pt3}
 ##### {{< fa envelope solid size=xl >}}&ensp;Email 
-Send an email to <{{< var validmind.support >}}>.
+Send an email to <{{< var vm.support >}}>.
 
 If you have a {{< var vm.product >}} account, send a message from your login email to help us identify you.
 
