--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -22,9 +22,9 @@ listing:
     sort: false
     grid-columns: 1
     contents:
-      - path: https://support.validmind.com
+      - path: https://support.validmind.ai
         title: "{{< fa cricle-question >}} {{< var vm.product >}} Help Center"
-        subtitle: "https://support.validmind.com {{< fa angle-right >}}"
+        subtitle: "https://{{< var validmind.support >}} {{< fa angle-right >}}"
         description: "Sign in with your {{< var vm.product >}} account and then click on **Submit a request**."
     fields: [title, subtitle, description]
 ---
@@ -58,7 +58,7 @@ We recommend you use the Help Center because it allows you to keep track of and 
 
 ::: {.pt3}
 ##### {{< fa handshake-simple solid size=xl >}}&ensp;Help Center (recommended)
-Go to [support.validmind.com](https://support.validmind.com) and submit a request. 
+Go to [{{< var validmind.support >}}](https://{{< var validmind.support >}}) and submit a request. 
 
 If you have a {{< var vm.product >}} account, sign in with your login email to help us identify you.
 
