--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -22,7 +22,7 @@ listing:
     sort: false
     grid-columns: 1
     contents:
-      - path: https://support.validmind.ai
+      - path: https://support.validmind.com
         title: "{{< fa cricle-question >}} {{< var vm.product >}} Help Center"
         subtitle: "https://{{< var validmind.support >}} {{< fa angle-right >}}"
         description: "Sign in with your {{< var vm.product >}} account and then click on **Submit a request**."
