Rough in new look

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -3,7 +3,7 @@
 # See the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
 title: What is ValidMind?
-subtitle: Product Tour
+subtitle: <b>a short product tour</b>
 favicon: ../assets/validmind.png
 format:
   revealjs:
@@ -31,29 +31,104 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# [Contents]{.hidden}{data-autoslide="60000"}
+# [How do I use ...?]{.hidden}{data-autoslide="60000"}
 
 :::: {.columns}
 
-::: {.column width="30%" .pr4 .nt5}
-[How do I<br>use ...?]{.smallcaps .f1 .b}
+::: {.column width="30%" .tc .nt5}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[1]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
 :::
 
-::: {.column width="70%" .f2 .pl3 .nt5}
-[1]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Inventory]{.b}
+::: {.nt6}
+![](1-the-inventory.png){height=125px fig-alt="A screenshot of the inventory"}<br>[[The Inventory]{.b .black .f4}](#the-inventory)
+:::
 
-[2]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Workflows]{.b}
+:::
+:::
 
-[3]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Documentation & Testing]{.b}
+::: {.column width="30%" .tc .nt5}
 
-[4]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Review & Oversight]{.b}
+:::{.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[2]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+:::
 
-[5]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Analytics & Monitoring]{.b}
+::: {.nt6}
+![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[Workflows & Approvals]{.b .black .f4}](#workflows-approvals)
+:::
+
+:::
+:::
+
+::: {.column width="30%" .tc .nt5}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[3]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[Reporting & Analytics]{.b .black .f4}](#reporting-analytics)
+:::
+
+:::
 :::
 
 ::::
 
-::: {.slideover--b .half}
+<br>
+
+:::: {.columns}
+
+::: {.column width="30%" .tc}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt2}
+[4]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation, Testing & Validation]{.b .black .f4}](#documentation-testing-validation)
+:::
+
+:::
+:::
+
+::: {.column width="30%" .tc}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[5]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[Ongoing Monitoring]{.b .black .f4}](#ongoing-monitoring)
+:::
+
+:::
+:::
+
+::: {.column width="30%" .tc}
+
+::: {.button .button-light-green .shadow-5-ns}
+::: {.tl .nl4 .nt3}
+[6]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+:::
+
+::: {.nt6}
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights & Regulatory Alignment]{.b .black .f4}](#6-ai-risk-insights-regulatory-alignment)
+:::
+
+:::
+:::
+
+::::
+
+
+::: {.slideover--b .half .auto-collapse}
 
 ::: {.tc}
 
@@ -73,23 +148,24 @@ skip_preview: true
 
 :::
 
+# [1&ensp;The Inventory]{.hidden}{data-autoslide="12000"}
 
-# [1 — Inventory]{.hidden}{data-autoslide="12000"}
-
-[1]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Inventory]{.f2 .b}
+[1]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[The Inventory]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
-**Governance expectations:**
+::: {.column width="20%" .f3 .pr3}
+![](1-the-inventory.png){fig-alt="A screenshot of the inventory"}
 
-> _Maintain a comprehensive registry of AI systems, models, and tools with clear ownership, classification, and dependencies._
+<!-- **Governance expectations:**
+
+> _Maintain a comprehensive registry of AI systems, models, and tools with clear ownership, classification, and dependencies._ -->
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind offers a platform to [register items]{.highlight .b}, maintain [a customizable inventory]{.highlight .b}, and implement [risk-based classification]{.highlight .b} to support effective governance.
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
+ValidMind offers a platform to [register items]{.b}, maintain [a customizable inventory]{.b}, and implement [risk-based classification]{.b} to support effective governance.
 :::
 
 ::::
@@ -103,7 +179,7 @@ ValidMind offers a platform to [register items]{.highlight .b}, maintain [a cust
 ![](../assets/vm-model-inventory.gif){fig-alt="An animation of the inventory to filter for items and change the layout" .screenshot}
 :::
 
-::: {.column width="25%" .f3 .pl4 .bl .pv4 .nt4}
+::: {.column width="25%" .f3 .pl4 .pv4 .nt4}
 [Inventory]{.button-small .f4}
 
 - Industry-aligned
@@ -140,7 +216,7 @@ ValidMind offers a platform to [register items]{.highlight .b}, maintain [a cust
 ![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot}
 :::
 
-::: {.column width="40%" .f3 .pl4 .bl}
+::: {.column width="40%" .f3 .pl4}
 [Registration]{.button-small .f4}
 
 - Register items and track them across their lifecycle
@@ -172,18 +248,18 @@ ValidMind offers a platform to [register items]{.highlight .b}, maintain [a cust
 :::
 
 
-# [2 — Workflows]{.hidden}{data-autoslide="18000"}
+# [2&ensp;Workflows & Approvals]{.hidden}{data-autoslide="18000"}
 
-[2]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Workflows]{.f2 .b}
+[2]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Workflows & Approvals]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
 ::: {.column width="40%" .f3 .pr4 .pt2}
-**Regulatory expectations:**
+<!-- **Regulatory expectations:**
 
-> _Ensure strong governance with oversight, clear policies, and assigned accountability._
+> _Ensure strong governance with oversight, clear policies, and assigned accountability._ -->
 
 :::
 
@@ -206,7 +282,7 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 ::: {.column width="25%" .f4}
 [Roles and Responsibilities]{.button-small .f5} 
 
-::: {.bl .pl4 .mb4}
+::: {.pl4 .mb4}
 Clearly define roles for: 
 
 - Owners
@@ -217,7 +293,7 @@ Clearly define roles for:
 
 [Audit Trails]{.button-small .f5} 
 
-::: {.bl .pl4}
+::: {.pl4}
 Track all activities for:
 
 - Workflow stages
@@ -269,7 +345,7 @@ Track all activities for:
 
 Use workflows to: 
 
-::: {.bl .pl4 .mb4}
+::: {.pl4 .mb4}
 - Implement governance frameworks
 - Automate risk processes with triggers and schedules
 - Standardize model documentation and independent review
@@ -287,7 +363,7 @@ Use workflows to:
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use workflows?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-workflows/working-with-model-workflows.html) 
+[[{{< fa circle-info >}}&ensp;How do I use workflows?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/workflows/working-with-workflows.html) 
 :::
 
 ::: {.column width="50%" .tc .nt4}
@@ -299,23 +375,93 @@ Use workflows to:
 :::
 
 
-# [3 — Documentation & Testing]{.hidden}{data-autoslide="18000"}
+# [3&ensp;Reporting & Analytics]{.hidden}{data-autoslide="12000"}
 
-[3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Documentation & Testing]{.f2 .b}
+[3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Reporting & Analytics]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
 ::: {.column width="40%" .f3 .pr4 .pt2}
-**Governance expectations:**
+<!-- **Governance expectations:**
 
-> _Implement robust development processes with standards for design, testing, and documentation._
+> _Provide comprehensive reporting to enable management oversight and demonstrate compliance with policies and regulations._ -->
 
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind sets a standard by [automating documentation]{.highlight .b} and providing [comprehensive testing]{.highlight .b} to ensure soundness and data quality.
+ValidMind provides [customizable dashboards]{.highlight .b} and [analytics]{.highlight .b} for oversight, plus [flexible exports]{.highlight .b} to meet reporting requirements.
+
+:::
+
+::::
+
+
+# [Analytics]{.hidden}{data-autoslide="14000"}
+
+::: {.tr .nt4}
+[Management Responsibilities]{.button-small .f3}
+:::
+
+:::: {.columns}
+
+::: {.column width="70%" .nl3}
+![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot}
+:::
+
+::: {.column width="30%" .f3}
+
+::: {.pl4 .mb4 .mt4 .pt2}
+- Enable management with responsibility for the governance framework
+- Create reports & analytics
+- Perform attestation by owners
+:::
+
+[Internal Audit]{.button-small .f4}
+
+::: {.pl4 .mt4}
+Track artifacts, approvals, and sign-offs across the lifecycle
+:::
+
+:::
+
+::::
+
+::: {.slideover--b .three-quarters}
+
+:::: columns
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;How do I use analytics?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/working-with-analytics.html) 
+:::
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa file-export >}}&ensp;How do I export data?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html)
+:::
+
+::::
+
+:::
+
+
+# [4&ensp;Documentation, Testing & Validation]{.hidden}{data-autoslide="18000"}
+
+[4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Documentation, Testing & Validation]{.f2 .b}
+
+<hr>
+
+:::: {.columns}
+
+::: {.column width="40%" .f3 .pr4 .pt2}
+<!-- **Governance expectations:**
+
+> _Implement robust development processes with standards for design, testing, documentation, and independent review._ -->
+
+:::
+
+::: {.column width="60%" .f2 .pl2 .pr2}
+ValidMind sets a standard by [automating documentation]{.highlight .b}, providing [comprehensive testing]{.highlight .b}, and enabling [independent validation]{.highlight .b} with full audit trails.
 
 :::
 
@@ -397,7 +543,7 @@ ValidMind sets a standard by [automating documentation]{.highlight .b} and provi
 
 :::
 
-::: {.column width="35%" .bl .pl4 .pb3 .nt2 .f3}
+::: {.column width="35%" .pl4 .pb3 .nt2 .f3}
 [Comprehensive Testing]{.button-small .f4}
 
 - Open-source library
@@ -442,6 +588,197 @@ results = vm.run_development_tests()
 :::
 
 
+# [Independent review]{.hidden}{data-autoslide="24000"}
+
+:::: {.columns}
+
+::: {.column width="70%" .mt2}
+![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot}
+:::
+
+::: {.column width="30%" .pl4 .f3}
+[Independent Review ]{.button-small .f4}
+
+- Tailor the process to regulatory and internal standards
+- Assess compliance by linking evidence from developers and validators
+- Generate risk assessments with clear recommendations
+:::
+
+::::
+
+::: {.slideover--b .three-quarters}
+
+:::: columns
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html) 
+:::
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa rocket >}}&ensp;Open validation reports]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory)
+:::
+
+::::
+
+:::
+
+
+# [Process verification]{.hidden}{data-autoslide="12000"}
+
+:::: {.columns}
+
+::: {.column width="70%" .nl3 .nt5}
+![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot}
+:::
+
+::: {.column width="30%" .pl4 .f3 .nt4} 
+
+[Process Verification]{.button-small .f4}
+
+- Create artifacts with severity, risk area, and references
+- Track remediation plans and monitor resolution
+- Ensure thorough checks and collaboration with developers
+- Create challenger models
+:::
+
+::::
+
+::: {.slideover--b}
+
+:::: columns
+
+::: {.column width="50%" .nt4}
+[Did you know?]{.f3 .b}<br>
+Validators can use the same library as model developers: 
+
+- Run your own tests to create challenger models
+- Link the results as validator evidence to your report
+:::
+
+::: {.column width="50%" .tc .pl4 .nt4}
+[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html)<br>[CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5}
+:::
+
+::::
+
+:::
+
+
+# [5&ensp;Ongoing Monitoring]{.hidden}{data-autoslide="6000"}
+
+[5]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Ongoing Monitoring]{.f2 .b}
+
+<hr>
+
+:::: {.columns}
+
+::: {.column width="40%" .f3 .pr4 .pt2}
+<!-- **Governance expectations:**
+
+> _Continuously monitor items to ensure they remain accurate, reliable, and appropriate for their intended use._ -->
+:::
+
+::: {.column width="60%" .f2 .pl2 .pr2}
+
+ValidMind provides [ongoing monitoring]{.highlight .b} to ensure items perform as expected and to detect potential issues early.
+
+Combine monitoring and workflows for [performance-based governance]{.highlight .b} with [thresholds and alerts]{.highlight .b} to trigger action.
+:::
+
+::::
+
+# [Ongoing monitoring]{.hidden}{data-autoslide="28500"}
+
+:::: {.columns}
+
+::: {.column width="70%" .pt4}
+![](../assets/vm-ongoing-monitoring.gif){fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
+:::
+
+::: {.column width="30%" .mt3 .pl4 .f3}
+[Ongoing Monitoring]{.button-small .f4}
+
+- Enable for any model in the inventory
+- Track model performance over time
+- Detect data drift and other issues early
+- Define thresholds and receive alerts
+
+![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
+:::
+
+:::: 
+
+# [Governance]{.hidden}{data-autoslide="21000"}
+
+:::: {.columns}
+
+::: {.column width="75%" .nt5 .pl4}
+![](../assets/vm-periodic-review-long.gif){width="90%" fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot}
+:::
+
+::: {.column width="25%" .f4}
+[Outcomes Analysis]{.button-small .f5}
+
+::: {.pl4 .mb4}
+- Detect test results that exceed thresholds
+- Follow escalation workflows when metrics exceed limits
+- Document and track remediation activities
+:::
+
+[Data-Driven Governance]{.button-small .f5}
+
+::: {.pl4}
+Combine monitoring & workflows for:
+
+- Scheduled revalidation cycles
+- Event-triggered reassessments
+- Escalation to risk functions & committees
+:::
+
+:::
+
+::::
+
+::: {.slideover--b .three-quarters}
+
+:::: columns
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;How do I enable monitoring?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/enable-monitoring.html) 
+:::
+
+::: {.column width="50%" .tc .nt4}
+[[{{< fa bell >}}&ensp;Set thresholds and alerts]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/set-thresholds-and-alerts.html)
+:::
+
+::::
+
+:::
+
+
+# [6&ensp;Risk Insights & Regulatory Alignment]{.hidden}{data-autoslide="12000"}
+
+[6]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Risk Insights & Regulatory Alignment]{.f2 .b}
+
+<hr>
+
+:::: {.columns}
+
+::: {.column width="40%" .f3 .pr4 .pt2}
+<!-- **Governance expectations:**
+
+> _Leverage AI capabilities to enhance risk assessment, ensure regulatory compliance, and maintain alignment with evolving frameworks._ -->
+
+:::
+
+::: {.column width="60%" .f2 .pl2 .pr2}
+ValidMind provides [AI-powered risk insights]{.highlight .b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.highlight .b} and compliance requirements.
+
+:::
+
+::::
+
+
 # [Document checker]{.hidden}{data-autoslide="12000"}
 
 :::: {.columns}
@@ -456,7 +793,7 @@ results = vm.run_development_tests()
 
 ::: {.column width="30%" .pt4}
 
-::: {.bl .pt2 .pl4 .pb4}
+::: {.pt2 .pl4 .pb4}
 [Document Checker]{.button-small .f4}
 
 ::: {.f3}
@@ -481,43 +818,46 @@ results = vm.run_development_tests()
 :::
 
 
-# [4 — Review & Oversight]{.hidden}{data-autoslide="12000"}
-
-[4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Review & Oversight]{.f2 .b}
-
-<hr>
+# [AI-powered features]{.hidden}{data-autoslide="18000"}
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
-**Governance expectations:**
+::: {.column width="60%" .pr4}
 
-> _Provide ongoing, independent challenge to development and use, ensuring artifacts are actioned._
+::: {.pl4 .mb4}
+[Test Interpretation]{.button-small .f4}
+
+::: {.f3}
+- Interprets results from tests run within ValidMind
+- Generates descriptions of tests and highlights key insights
+- Provides summaries with actionable takeaways
+:::
+:::
+
+::: {.pl4 .mb4}
+[Risk Assessment]{.button-small .f4}
+
+::: {.f3}
+- Generates tailored risk assessments using test results
+- Aids in identifying potential risks based on model performance
+- Provides foundation for better-informed decision-making
+:::
+:::
 
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind enables [independent review]{.highlight .b} and [process verification]{.highlight .b} that meet strict policies and regulations, plus [attestation]{.highlight .b} for periodic certification.
+::: {.column width="40%" .pl4}
 
+::: {.pl4 .mb4}
+[Qualitative Checks]{.button-small .f4}
+
+::: {.f3}
+- Leverages metadata from inventory and test outcomes
+- Creates qualitative sections within model documentation
+- Ensures contextual information is accurately documented
+:::
 :::
 
-::::
-
-
-# [Independent review]{.hidden}{data-autoslide="24000"}
-
-:::: {.columns}
-
-::: {.column width="70%" .mt2}
-![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot}
-:::
-
-::: {.column width="30%" .bl .pl4 .f3}
-[Independent Review ]{.button-small .f4}
-
-- Tailor the process to regulatory and internal standards
-- Assess compliance by linking evidence from developers and validators
-- Generate risk assessments with clear recommendations
 :::
 
 ::::
@@ -527,11 +867,11 @@ ValidMind enables [independent review]{.highlight .b} and [process verification]
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html) 
+[[{{< fa circle-info >}}&ensp;LLM features overview]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/overview-llm-features.html) 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open TBD]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/settings/workflows)
+[[{{< fa scale-balanced >}}&ensp;AI usage policy]{.button .button-light-green .shadow-5-ns}](https://validmind.com/about/legal/ai-usage-policy/)
 :::
 
 ::::
@@ -539,182 +879,59 @@ ValidMind enables [independent review]{.highlight .b} and [process verification]
 :::
 
 
-# [Process verification]{.hidden}{data-autoslide="12000"}
+# [Regulatory frameworks]{.hidden}{data-autoslide="15000"}
 
 :::: {.columns}
 
-::: {.column width="70%" .nl3 .nt5}
-![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot}
+::: {.column width="50%" .pr4}
+
+::: {.pl4 .mb4}
+[Built-in Framework Support]{.button-small .f4}
+
+::: {.f3}
+ValidMind provides predefined templates and workflows aligned with major regulatory frameworks:
 :::
 
-::: {.column width="30%" .bl .pl4 .f3 .nt4} 
+::: {.f4 .pl3 .pt2}
+[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI Act]{.button-small .shadow-5-ns}
+:::
+:::
 
-[Process Verification]{.button-small .f4}
+:::
 
-- Create artifacts with severity, risk area, and references
-- Track remediation plans and monitor resolution
-- Ensure thorough checks and collaboration with developers
-- Create challenger models
+::: {.column width="50%" .pl4}
+
+::: {.pl4 .mb4}
+[Compliance Features]{.button-small .f4}
+
+::: {.f3}
+- Predefined workflows for regulatory compliance
+- Templates aligned with framework requirements
+- Document checker for compliance validation
+- Audit trails for regulatory evidence
+:::
+:::
+
 :::
 
 ::::
 
-::: {.slideover--b}
+::: {.slideover--b .three-quarters}
 
 :::: columns
 
-::: {.column width="50%" .nt4}
-[Did you know?]{.f3 .b}<br>
-Validators can use the same library as model developers: 
-
-- Run your own tests to create  to create challenger models
-- Link the results as validator evidence to your report
+::: {.column width="50%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;AI governance guide]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/use-cases/ai-governance.html) 
 :::
 
-::: {.column width="50%" .tc .pl4 .nt4}
-[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html)<br>[CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5}
+::: {.column width="50%" .tc .nt4}
+[[{{< fa book >}}&ensp;EU AI Act implementation]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/use-cases/eu-ai-act.html)
 :::
 
 ::::
 
 :::
 
-
-# [5 — Analytics & Monitoring]{.hidden}{data-autoslide="6000"}
-
-[5]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Analytics & Monitoring]{.f2 .b}
-
-<hr>
-
-:::: {.columns}
-
-::: {.column width="40%" .f3 .pr4 .pt2}
-**Governance expectations:**
-
-> _Provide comprehensive reporting and ongoing monitoring to ensure items remain accurate, reliable, and appropriate for their intended use._
-:::
-
-::: {.column width="60%" .f2 .pl2 .pr2}
-
-ValidMind provides [ongoing monitoring]{.highlight .b} to ensure items perform as expected and to detect potential issues early.
-
-Combine monitoring and workflows for [performance-based governance]{.highlight .b}, plus [customizable dashboards]{.highlight .b} and analytics for oversight.
-:::
-
-::::
-
-# [Ongoing monitoring]{.hidden}{data-autoslide="28500"}
-
-:::: {.columns}
-
-::: {.column width="70%" .pt4}
-![](../assets/vm-ongoing-monitoring.gif){fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
-:::
-
-::: {.column width="30%" .bl .mt3 .pl4 .f3}
-[Ongoing Monitoring]{.button-small .f4}
-
-- Enable for any model in the inventory
-- Track model performance over time
-- Detect data drift and other issues early
-- Define thresholds and receive alerts
-
-![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
-:::
-
-:::: 
-
-# [Governance]{.hidden}{data-autoslide="21000"}
-
-:::: {.columns}
-
-::: {.column width="75%" .nt5 .pl4}
-![](../assets/vm-periodic-review-long.gif){width="90%" fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot}
-:::
-
-::: {.column width="25%" .f4}
-[Outcomes Analysis]{.button-small .f5}
-
-::: {.bl .pl4 .mb4}
-- Detect test results that exceed thresholds
-- Follow escalation workflows when metrics exceed limits
-- Document and track remediation activities
-:::
-
-[Data-Driven Governance]{.button-small .f5}
-
-::: {.bl .pl4}
-Combine monitoring & workflows for:
-
-- Scheduled revalidation cycles
-- Event-triggered reassessments
-- Escalation to risk functions & committees
-:::
-
-:::
-
-::::
-
-
-# [Analytics]{.hidden}{data-autoslide="14000"}
-
-::: {.tr .nt4}
-[Management Responsibilities]{.button-small .f3}
-:::
-
-:::: {.columns}
-
-::: {.column width="70%" .nl3}
-![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot}
-:::
-
-::: {.column width="30%" .f3}
-
-::: {.pl4 .bl .mb4 .mt4 .pt2}
-- Enable management with responsibility for the governance framework
-- Create reports & analytics
-- Perform attestation by owners
-:::
-
-[Internal Audit]{.button-small .f4}
-
-::: {.pl4 .bl .mt4}
-Track artifacts, approvals, and sign-offs across the lifecycle
-:::
-
-:::
-
-::::
-
-<!-- # [Analytics, part 2]{.hidden}{data-autoslide="14000"}
-
-::: {.tr .nt4}
-[Management Responsibilities]{.button-small .f3}
-:::
-
-:::: {.columns}
-
-::: {.column width="70%" .nl3}
-![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Findings tab, followed by a look at a sample finding before returning to the original tab" .screenshot}
-:::
-
-::: {.column width="30%" .f3}
-
-::: {.pl4 .bl .mb4 .mt4 .pt2}
-- Enable management with responsibility for the MRM framework
-- Create reports & model risk analytics
-- Perform attestation by model owners
-:::
-
-[Internal Audit]{.button-small .f4}
-
-::: {.pl4 .bl .mt4}
-Track findings, approvals, and sign-offs across the model lifecycle
-:::
-
-:::
-
-:::: -->
 
 # [Next Steps]{.smallcaps .f1} {data-autoslide="60000"}
 
