--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -43,7 +43,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](1-the-inventory.png){height=125px fig-alt="A screenshot of the inventory"}<br>[[The Inventory]{.b .black .f4}](#the-inventory)
+![](1-the-inventory.png){height=125px fig-alt="A screenshot of the inventory"}<br>[[the inventory]{.b .black .smallercaps}](#the-inventory)
 :::
 
 :::
@@ -57,7 +57,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[Workflows & Approvals]{.b .black .f4}](#workflows-approvals)
+![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[workflows + approvals]{.b .black .smallercaps}](#workflows-approvals)
 :::
 
 :::
@@ -71,7 +71,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[Reporting & Analytics]{.b .black .f4}](#reporting-analytics)
+![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[reporting + analytics]{.b .black .smallercaps}](#reporting-analytics)
 :::
 
 :::
@@ -91,7 +91,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation, Testing & Validation]{.b .black .f4}](#documentation-testing-validation)
+![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[documentation, testing + validation]{.b .black .smallercaps}](#documentation-testing-validation)
 :::
 
 :::
@@ -105,7 +105,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[Ongoing Monitoring]{.b .black .f4}](#ongoing-monitoring)
+![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[ongoing monitoring]{.b .black .smallercaps}](#ongoing-monitoring)
 :::
 
 :::
@@ -119,7 +119,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights & Regulatory Alignment]{.b .black .f4}](#6-ai-risk-insights-regulatory-alignment)
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[risk insights + regulatory alignment]{.b .black .smallercaps}](#6-ai-risk-insights-regulatory-alignment)
 :::
 
 :::
